--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -10911,6 +10911,830 @@ Greece/Volos
 Greece/Xanthi
 Greece/Zante
 --------------------------------------------------------------------
+Hungary/Aba
+Hungary/Abasár
+Hungary/Abaújszántó
+Hungary/Abda
+Hungary/Abony
+Hungary/Abádszalók
+Hungary/Acsa
+Hungary/Adony
+Hungary/Adács
+Hungary/Ajak
+Hungary/Ajka
+Hungary/Akasztó
+Hungary/Alap
+Hungary/Alattyán
+Hungary/Albertirsa
+Hungary/Almásfüzitő
+Hungary/Alsóbogát
+Hungary/Alsónémedi
+Hungary/Alsózsolca
+Hungary/Anarcs
+Hungary/Andornaktálya
+Hungary/Apagy
+Hungary/Apc
+Hungary/Apostag
+Hungary/Apátfalva
+Hungary/Aranyosapáti
+Hungary/Arló
+Hungary/Arnót
+Hungary/Aszaló
+Hungary/Aszód
+Hungary/Babócsa
+Hungary/Badacsonytomaj
+Hungary/Bag
+Hungary/Bagamér        
+Hungary/Baj
+Hungary/Baja
+Hungary/Bajna
+Hungary/Bakonycsernye
+Hungary/Bakonyszentlászló
+Hungary/Baks
+Hungary/Baktalórántháza
+Hungary/Balassagyarmat
+Hungary/Balatonalmádi
+Hungary/Balatonboglár
+Hungary/Balatonfenyves
+Hungary/Balatonföldvár
+Hungary/Balatonfüred
+Hungary/Balatonkenese
+Hungary/Balatonlelle
+Hungary/Balatonszabadi
+Hungary/Balatonszárszó
+Hungary/Balkány
+Hungary/Ballószög
+Hungary/Balmazújváros
+Hungary/Balástya
+Hungary/Baracs
+Hungary/Baracska
+Hungary/Barcs
+Hungary/Battonya
+Hungary/Bodajk
+Hungary/Bogyiszló
+Hungary/Bogács
+Hungary/Bokod
+Hungary/Boldog
+Hungary/Boldva
+Hungary/Bonyhád
+Hungary/Bordány
+Hungary/Borsodnádasd
+Hungary/Bucsa
+Hungary/Budakalász
+Hungary/Budakeszi
+Hungary/Budapest
+Hungary/Budaörs
+Hungary/Bugac
+Hungary/Bugyi
+Hungary/Buj
+Hungary/Buják
+Hungary/Bábolna
+Hungary/Bácsalmás
+Hungary/Bácsbokod
+Hungary/Bácsszentgyörgy
+Hungary/Bánd
+Hungary/Báránd
+Hungary/Báta
+Hungary/Bátaszék
+Hungary/Bátonyterenye
+Hungary/Bátya
+Hungary/Békés megye
+Hungary/Békéscsaba
+Hungary/Békésszentandrás
+Hungary/Békéssámson
+Hungary/Bélapátfalva
+Hungary/Bóly
+Hungary/Böhönye
+Hungary/Bököny
+Hungary/Bölcske
+Hungary/Bük
+Hungary/Bőcs
+Hungary/Bőny
+Hungary/Bősárkány
+Hungary/Cece
+Hungary/Cegléd
+Hungary/Ceglédbercel
+Hungary/Cibakháza
+Hungary/Cigánd
+Hungary/Csabrendek
+Hungary/Csanytelek
+Hungary/Csanádapáca
+Hungary/Csanádpalota
+Hungary/Csemő
+Hungary/Csengele
+Hungary/Csenger
+Hungary/Csengőd
+Hungary/Csepreg
+Hungary/Cserkeszőlő
+Hungary/Cserszegtomaj
+Hungary/Csetény
+Hungary/Csobánka
+Hungary/Csolnok
+Hungary/Csongrád
+Hungary/Csorna
+Hungary/Csorvás
+Hungary/Csurgó
+Hungary/Csákvár
+Hungary/Csány
+Hungary/Császár
+Hungary/Császártöltés
+Hungary/Csávoly
+Hungary/Csökmő
+Hungary/Csömör
+Hungary/Dabas
+Hungary/Debrecen
+Hungary/Decs
+Hungary/Demecser
+Hungary/Derecske
+Hungary/Deszk
+Hungary/Devecser
+Hungary/Diósd
+Hungary/Diósjenő
+Hungary/Doboz
+Hungary/Domaszék
+Hungary/Dombegyház
+Hungary/Dombrád
+Hungary/Dombóvár
+Hungary/Domony
+Hungary/Domoszló
+Hungary/Dorog
+Hungary/Dunaalmás
+Hungary/Dunabogdány
+Hungary/Dunaföldvár
+Hungary/Dunaharaszti
+Hungary/Dunakeszi
+Hungary/Dunapataj
+Hungary/Dunaszekcső
+Hungary/Dunaszentgyörgy
+Hungary/Dunaszentmiklós
+Hungary/Dunavarsány
+Hungary/Dunavecse
+Hungary/Dunaújváros
+Hungary/Dusnok
+Hungary/Dánszentmiklós
+Hungary/Dány
+Hungary/Dávod
+Hungary/Dég
+Hungary/Délegyháza
+Hungary/Dévaványa
+Hungary/Döbrököz
+Hungary/Döge
+Hungary/Dömsöd
+Hungary/Ebes
+Hungary/Ecser
+Hungary/Ecséd
+Hungary/Edelény
+Hungary/Eger
+Hungary/Egerszalók
+Hungary/Egyek
+Hungary/Elek
+Hungary/Előszállás
+Hungary/Emőd
+Hungary/Encs
+Hungary/Encsencs
+Hungary/Enying
+Hungary/Ercsi
+Hungary/Erdőkertes
+Hungary/Erdőtelek
+Hungary/Esztergom
+Hungary/Eszterháza
+Hungary/Etyek
+Hungary/Fadd
+Hungary/Farkaslyuk
+Hungary/Farmos
+Hungary/Farád
+Hungary/Fegyvernek
+Hungary/Fehérgyarmat
+Hungary/Fehérvárcsurgó
+Hungary/Felsőpakony
+Hungary/Felsőszentiván
+Hungary/Felsőtárkány
+Hungary/Felsőzsolca
+Hungary/Fertőrákos
+Hungary/Fertőszentmiklós
+Hungary/Fonyód
+Hungary/Forráskút
+Hungary/Forrópuszta
+Hungary/Fábiánsebestyén
+Hungary/Fényeslitke
+Hungary/Fót
+Hungary/Földes
+Hungary/Földeák
+Hungary/Fülöpszállás
+Hungary/Füzesabony
+Hungary/Füzesgyarmat
+Hungary/Galgahéviz
+Hungary/Galgamácsa
+Hungary/Gara
+Hungary/Gencsapáti
+Hungary/Gesztely
+Hungary/Gomba
+Hungary/Gyenesdiás
+Hungary/Gyomaendrőd
+Hungary/Gyula
+Hungary/Gyulaháza
+Hungary/Gyál
+Hungary/Gyömrő
+Hungary/Gyöngyös
+Hungary/Gyöngyöshalász
+Hungary/Gyöngyöspata
+Hungary/Gyöngyössolymos
+Hungary/Gyöngyöstarján
+Hungary/Gyönk
+Hungary/Győr
+Hungary/Győrszemere
+Hungary/Győrújbarát
+Hungary/Gádoros
+Hungary/Gárdony
+Hungary/Gégény
+Hungary/Göd
+Hungary/Gödre
+Hungary/Gödöllő
+Hungary/Gönc
+Hungary/Görbeháza
+Hungary/Hajdubagos
+Hungary/Hajdúböszörmény
+Hungary/Hajdúdorog
+Hungary/Hajdúhadház
+Hungary/Hajdúnánás
+Hungary/Hajdúszoboszló
+Hungary/Hajdúszovát
+Hungary/Hajdúsámson
+Hungary/Hajmáskér
+Hungary/Hajós
+Hungary/Halmaj
+Hungary/Halászi
+Hungary/Halásztelek
+Hungary/Harkány
+Hungary/Harsány
+Hungary/Harta
+Hungary/Hatvan
+Hungary/Hegyeshalom
+Hungary/Hejőbába
+Hungary/Helvécia
+Hungary/Hercegszántó
+Hungary/Herend
+Hungary/Hernád
+Hungary/Hernádnémeti
+Hungary/Heréd
+Hungary/Heves
+Hungary/Hidas
+Hungary/Hodász
+Hungary/Hort
+Hungary/Hortobágy
+Hungary/Horvátkimle
+Hungary/Hosszúhetény
+Hungary/Hosszúpályi
+Hungary/Hévizgyörk
+Hungary/Hévíz
+Hungary/Hódmezővásárhely
+Hungary/Hőgyész
+Hungary/Ibrány
+Hungary/Iklad
+Hungary/Inárcs
+Hungary/Iregszemcse
+Hungary/Isaszeg
+Hungary/Iváncsa
+Hungary/Izsák
+Hungary/Izsófalva
+Hungary/Jakabszállás
+Hungary/Jobbágyi
+Hungary/Ják
+Hungary/Jánoshalma
+Hungary/Jánoshida
+Hungary/Jánosháza
+Hungary/Jánossomorja
+Hungary/Járdánháza
+Hungary/Jászalsószentgyörgy
+Hungary/Jászapáti
+Hungary/Jászberény
+Hungary/Jászdózsa
+Hungary/Jászjákóhalma
+Hungary/Jászkarajenő
+Hungary/Jászkisér
+Hungary/Jászladány
+Hungary/Jászszentandrás
+Hungary/Jászszentlászló
+Hungary/Jászárokszállás
+Hungary/Kaba
+Hungary/Kadarkút
+Hungary/Kakucs
+Hungary/Kalocsa
+Hungary/Kaposmérő
+Hungary/Kaposvár
+Hungary/Kapuvár
+Hungary/Karancskeszi
+Hungary/Karancslapujtő
+Hungary/Karcag
+Hungary/Karcsa
+Hungary/Kartal
+Hungary/Karácsond
+Hungary/Karád
+Hungary/Kaszaper
+Hungary/Katymár
+Hungary/Kazincbarcika
+Hungary/Kazár
+Hungary/Kecel
+Hungary/Kecskemét
+Hungary/Kecskéd
+Hungary/Kelebia
+Hungary/Kemecse
+Hungary/Kenderes
+Hungary/Kengyel
+Hungary/Kerecsend
+Hungary/Kerekegyháza
+Hungary/Keszthely
+Hungary/Kesztölc
+Hungary/Kevermes
+Hungary/Kisbér
+Hungary/Kiscell
+Hungary/Kiskunfélegyháza
+Hungary/Kiskunhalas
+Hungary/Kiskunlacháza
+Hungary/Kiskunmajsa
+Hungary/Kisköre
+Hungary/Kiskőrös
+Hungary/Kisláng
+Hungary/Kisléta
+Hungary/Kisszállás
+Hungary/Kistelek
+Hungary/Kisvárda
+Hungary/Kiszombor
+Hungary/Kisújszállás
+Hungary/Kocs
+Hungary/Kocsord
+Hungary/Kocsér
+Hungary/Komló
+Hungary/Kompolt
+Hungary/Komádi
+Hungary/Komárom
+Hungary/Kondoros
+Hungary/Konyár
+Hungary/Kosd
+Hungary/Kozármisleny
+Hungary/Kunfehértó
+Hungary/Kunhegyes
+Hungary/Kunmadaras
+Hungary/Kunszentmiklós
+Hungary/Kunszentmárton
+Hungary/Kunágota
+Hungary/Kál
+Hungary/Kállósemjén
+Hungary/Kálmánháza
+Hungary/Káloz
+Hungary/Kántorjánosi
+Hungary/Kápolnásnyék
+Hungary/Kék
+Hungary/Kétegyháza
+Hungary/Kéthely
+Hungary/Kóka
+Hungary/Kóny
+Hungary/Kótaj
+Hungary/Körmend
+Hungary/Környe
+Hungary/Körösladány
+Hungary/Köröstarcsa
+Hungary/Kőszeg
+Hungary/Lajoskomárom
+Hungary/Lajosmizse
+Hungary/Lakitelek
+Hungary/Lengyeltóti
+Hungary/Lenti
+Hungary/Lepsény
+Hungary/Letenye
+Hungary/Levelek
+Hungary/Leányfalu
+Hungary/Litér
+Hungary/Lovasberény
+Hungary/Lábatlan
+Hungary/Lábod
+Hungary/Lánycsók
+Hungary/Lébénymiklós
+Hungary/Létavértes
+Hungary/Lőkösháza
+Hungary/Lőrinci
+Hungary/Madaras
+Hungary/Madocsa
+Hungary/Maglód
+Hungary/Magyarbánhegyes
+Hungary/Maklár
+Hungary/Makó
+Hungary/Marcali
+Hungary/Maroslele
+Hungary/Martonvásár
+Hungary/Medgyesegyháza
+Hungary/Megyaszó
+Hungary/Mende
+Hungary/Mezőberény
+Hungary/Mezőcsát
+Hungary/Mezőfalva
+Hungary/Mezőhegyes
+Hungary/Mezőkeresztes
+Hungary/Mezőkovácsháza
+Hungary/Mezőkövesd
+Hungary/Mezőszilas
+Hungary/Mezőtúr
+Hungary/Mezőzombor
+Hungary/Mihályi
+Hungary/Mikepércs
+Hungary/Mindszent
+Hungary/Miskolc
+Hungary/Mocsa
+Hungary/Mogyoród
+Hungary/Mohács
+Hungary/Monok
+Hungary/Monor
+Hungary/Monostorpályi
+Hungary/Mosonmagyaróvár
+Hungary/Murakeresztúr
+Hungary/Mád
+Hungary/Mágocs
+Hungary/Mályi
+Hungary/Mándok
+Hungary/Mány
+Hungary/Máriapócs
+Hungary/Mátraderecske
+Hungary/Mátranovák
+Hungary/Mátraterenye
+Hungary/Mátraverebély
+Hungary/Mátészalka
+Hungary/Méhkerék
+Hungary/Mélykút
+Hungary/Mérk
+Hungary/Mór
+Hungary/Mórahalom
+Hungary/Múcsony
+Hungary/Nagyatád
+Hungary/Nagybajom
+Hungary/Nagybaracska
+Hungary/Nagycserkesz
+Hungary/Nagydobos
+Hungary/Nagydorog
+Hungary/Nagyecsed
+Hungary/Nagyhalász
+Hungary/Nagyigmánd
+Hungary/Nagykanizsa
+Hungary/Nagykovácsi
+Hungary/Nagykálló
+Hungary/Nagykáta
+Hungary/Nagykőrös
+Hungary/Nagymaros
+Hungary/Nagymányok
+Hungary/Nagyoroszi
+Hungary/Nagyrábé
+Hungary/Nagyréde
+Hungary/Nagyszénás
+Hungary/Nagytarcsa
+Hungary/Napkor
+Hungary/Naszály
+Hungary/Nemesnádudvar
+Hungary/Nemesvámos
+Hungary/Neszmély
+Hungary/Nyergesújfalu
+Hungary/Nyáregyháza
+Hungary/Nyárlőrinc
+Hungary/Nyékládháza
+Hungary/Nyíracsád
+Hungary/Nyíradony
+Hungary/Nyírbogdány
+Hungary/Nyírbogát
+Hungary/Nyírbátor
+Hungary/Nyírbéltek
+Hungary/Nyírcsaholy
+Hungary/Nyíregyháza
+Hungary/Nyírgyulaj
+Hungary/Nyírkarász
+Hungary/Nyírlugos
+Hungary/Nyírmada
+Hungary/Nyírmeggyes
+Hungary/Nyírmihálydi
+Hungary/Nyírmártonfalva
+Hungary/Nyírpazony
+Hungary/Nyírtass
+Hungary/Nyírtelek
+Hungary/Nyírvasvári
+Hungary/Nyírábrány
+Hungary/Nyúl
+Hungary/Nádudvar
+Hungary/Németkér
+Hungary/Okány
+Hungary/Olaszliszka
+Hungary/Onga
+Hungary/Orgovány
+Hungary/Orosháza
+Hungary/Oroszlány
+Hungary/Ostoros
+Hungary/Ozora
+Hungary/Pacsa
+Hungary/Paks
+Hungary/Pannonhalma
+Hungary/Parád
+Hungary/Parádsasvár
+Hungary/Pellérd
+Hungary/Perbál
+Hungary/Perkáta
+Hungary/Petneháza
+Hungary/Petőfibánya
+Hungary/Pilis
+Hungary/Pilisborosjenő
+Hungary/Piliscsaba
+Hungary/Piliscsév
+Hungary/Pilismarót
+Hungary/Pilisszentiván
+Hungary/Pilisszentkereszt
+Hungary/Pilisszántó
+Hungary/Pilisvörösvár
+Hungary/Pincehely
+Hungary/Pocsaj
+Hungary/Polgár
+Hungary/Polgárdi
+Hungary/Pomáz
+Hungary/Porcsalma
+Hungary/Poroszló
+Hungary/Prügy
+Hungary/Pusztaföldvár
+Hungary/Pusztaszabolcs
+Hungary/Pusztaszer
+Hungary/Pusztavám
+Hungary/Putnok
+Hungary/Pákozd
+Hungary/Pálmonostora
+Hungary/Pánd
+Hungary/Pápa
+Hungary/Pásztó
+Hungary/Pátroha
+Hungary/Pázmánd
+Hungary/Pécel
+Hungary/Pécs
+Hungary/Pécsvárad
+Hungary/Pér
+Hungary/Péteri
+Hungary/Pétervására
+Hungary/Pétfürdő
+Hungary/Püspökladány
+Hungary/Rajka
+Hungary/Rakamaz
+Hungary/Recsk
+Hungary/Ricse
+Hungary/Rimóc
+Hungary/Romhány
+Hungary/Rudabánya
+Hungary/Ruzsa
+Hungary/Rábapatona
+Hungary/Rácalmás
+Hungary/Ráckeresztúr
+Hungary/Ráckeve
+Hungary/Rákóczifalva
+Hungary/Rákócziújfalu
+Hungary/Répcelak
+Hungary/Rétság
+Hungary/Rózsaszentmárton
+Hungary/Röszke
+Hungary/S.örös
+Hungary/Sajóbábony
+Hungary/Sajókaza
+Hungary/Sajólád
+Hungary/Sajószentpéter
+Hungary/Sajószöged
+Hungary/Sajóvámos
+Hungary/Salgótarján
+Hungary/Sarkad
+Hungary/Segesd
+Hungary/Sellye
+Hungary/Seregélyes
+Hungary/Siklós
+Hungary/Simontornya
+Hungary/Sirok
+Hungary/Siófok
+Hungary/Solt
+Hungary/Soltvadkert
+Hungary/Solymár
+Hungary/Somogyvár
+Hungary/Somoskőújfalu
+Hungary/Soponya
+Hungary/Sopron
+Hungary/Szabadbattyán
+Hungary/Szabadkígyós
+Hungary/Szabadszállás
+Hungary/Szada
+Hungary/Szajol
+Hungary/Szakoly
+Hungary/Szalkszentmárton
+Hungary/Szamosszeg
+Hungary/Szank
+Hungary/Szany
+Hungary/Szarvas
+Hungary/Szatymaz
+Hungary/Szedres
+Hungary/Szeged
+Hungary/Szeghalom
+Hungary/Szegvár
+Hungary/Szekszárd
+Hungary/Szendrő
+Hungary/Szentendre
+Hungary/Szentes
+Hungary/Szentgotthárd
+Hungary/Szentgálpuszta
+Hungary/Szentistván
+Hungary/Szentkirály
+Hungary/Szentkirályszabadja
+Hungary/Szentlőrinc
+Hungary/Szentlőrinckáta
+Hungary/Szentmártonkáta
+Hungary/Szerencs
+Hungary/Szigetcsép
+Hungary/Szigethalom
+Hungary/Szigetszentmiklós
+Hungary/Szigetvár
+Hungary/Szigetújfalu
+Hungary/Szihalom
+Hungary/Szikszó
+Hungary/Szilvásvárad
+Hungary/Szirmabesenyő
+Hungary/Szob
+Hungary/Szolnok
+Hungary/Szombathely
+Hungary/Szomód
+Hungary/Szurdokpüspöki
+Hungary/Szászvár
+Hungary/Százhalombatta
+Hungary/Szécsény
+Hungary/Székesfehérvár
+Hungary/Székkutas
+Hungary/Sződ
+Hungary/Sződliget
+Hungary/Sály
+Hungary/Sándorfalva
+Hungary/Sárbogárd
+Hungary/Sárisáp
+Hungary/Sárkeresztúr
+Hungary/Sármellék
+Hungary/Sárosd
+Hungary/Sárospatak
+Hungary/Sárrétudvari
+Hungary/Sárszentmihály
+Hungary/Sárvár
+Hungary/Sáránd
+Hungary/Sásd
+Hungary/Sátoraljaújhely
+Hungary/Sóskút
+Hungary/Sükösd
+Hungary/Sümeg
+Hungary/Süttő
+Hungary/Tab
+Hungary/Tahitótfalu
+Hungary/Taksony
+Hungary/Taktaharkány
+Hungary/Taktaszada
+Hungary/Tamási
+Hungary/Tapolca
+Hungary/Tar
+Hungary/Tarcal
+Hungary/Tarján
+Hungary/Tarnalelesz
+Hungary/Tarpa
+Hungary/Tass
+Hungary/Taszár
+Hungary/Tata
+Hungary/Tatabánya
+Hungary/Telki
+Hungary/Tengelic
+Hungary/Tihany
+Hungary/Tiszaalpár
+Hungary/Tiszabercel
+Hungary/Tiszabezdéd
+Hungary/Tiszabura
+Hungary/Tiszabő
+Hungary/Tiszacsege
+Hungary/Tiszadada
+Hungary/Tiszadob
+Hungary/Tiszaeszlár
+Hungary/Tiszaföldvár
+Hungary/Tiszafüred
+Hungary/Tiszakarád
+Hungary/Tiszakeszi
+Hungary/Tiszakécske
+Hungary/Tiszalök
+Hungary/Tiszalúc
+Hungary/Tiszanagyfalu
+Hungary/Tiszanána
+Hungary/Tiszapüspöki
+Hungary/Tiszaroff
+Hungary/Tiszaszentimre
+Hungary/Tiszasüly
+Hungary/Tiszavasvári
+Hungary/Tiszaújváros
+Hungary/Tokaj
+Hungary/Tokod
+Hungary/Tolcsva
+Hungary/Tolna
+Hungary/Tompa
+Hungary/Tornyospálca
+Hungary/Tunyogmatolcs
+Hungary/Tura
+Hungary/Tuzsér
+Hungary/Tyukod
+Hungary/Táborfalva
+Hungary/Tállya
+Hungary/Tápióbicske
+Hungary/Tápiógyörgye
+Hungary/Tápiószecső
+Hungary/Tápiószele
+Hungary/Tápiószentmárton
+Hungary/Tápiószőlős
+Hungary/Tápióság
+Hungary/Táplánszentkereszt
+Hungary/Tárnok
+Hungary/Tát
+Hungary/Tázlár
+Hungary/Téglás
+Hungary/Tét
+Hungary/Tóalmás
+Hungary/Tószeg
+Hungary/Tótkomlós
+Hungary/Töltéstava
+Hungary/Tömörkény
+Hungary/Törtel
+Hungary/Törökbálint
+Hungary/Törökszentmiklós
+Hungary/Túrkeve
+Hungary/Türje
+Hungary/Vaja
+Hungary/Vajszló
+Hungary/Valkó
+Hungary/Vaskút
+Hungary/Vasvár
+Hungary/Vecsés
+Hungary/Velence
+Hungary/Veresegyház
+Hungary/Verpelét
+Hungary/Verőcemaros
+Hungary/Veszprém
+Hungary/Villány
+Hungary/Visegrád
+Hungary/Vonyarcvashegy
+Hungary/Vác
+Hungary/Vácszentlászló
+Hungary/Vál
+Hungary/Vámosgyörk
+Hungary/Vámospércs
+Hungary/Városföld
+Hungary/Várpalota
+Hungary/Vásárosnamény
+Hungary/Vép
+Hungary/Vértessomló Üdülőfalu
+Hungary/Vértesszőlős
+Hungary/Vésztő
+Hungary/Zagyvarékas
+Hungary/Zagyvaszántó
+Hungary/Zalaegerszeg
+Hungary/Zalakomár
+Hungary/Zalalövő
+Hungary/Zalaszentgrót
+Hungary/Zamárdi
+Hungary/Zirc
+Hungary/Zomba
+Hungary/Zsombó
+Hungary/Zsámbok
+Hungary/Zsámbék
+Hungary/Záhony
+Hungary/Zákányszék
+Hungary/Zámoly
+Hungary/Zánka
+Hungary/Ács
+Hungary/Ádánd
+Hungary/Ágasegyháza
+Hungary/Ágfalva
+Hungary/Ásotthalom
+Hungary/Ásványráró
+Hungary/Érd
+Hungary/Érsekcsanád
+Hungary/Érsekvadkert
+Hungary/Ócsa
+Hungary/Ófehértó
+Hungary/Ónod
+Hungary/Ópusztaszer
+Hungary/Ópályi
+Hungary/Ózd
+Hungary/Öcsöd
+Hungary/Ököritófülpös
+Hungary/Örkény
+Hungary/Öttevény
+Hungary/Újfehértó
+Hungary/Újhartyán
+Hungary/Újkígyós
+Hungary/Újszilvás
+Hungary/Újszász
+Hungary/Újtelep
+Hungary/Úri
+Hungary/Úrkút
+Hungary/Üllés
+Hungary/Üllő
+Hungary/Üröm
+Hungary/Őcsény
+Hungary/Őrbottyán
+Hungary/Ősi
+--------------------------------------------------------------------
 Iceland/Reykjavik
 --------------------------------------------------------------------
 Iran/`Ajab Shir
