--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -113,6 +113,21 @@ de  Y  \xc3\xb6  ö
 de  Y  \xc3\x9f  ß 
 de  Y  \xc3\x9c  Ü 
 de  Y  \xc3\xbc  ü 
+## Hungarian
+hu  Y  \xc3\xb6  ö
+hu  Y  \xc4\xb1  ü
+hu  Y  \xc3\xa1  á
+hu  Y  \xc3\xa9  é
+hu  Y  \xc3\xad   í
+hu  Y  \xc3\xb3	 ó
+hu  Y  \xc5\x91  ő
+hu  Y  \xc3\xba  ú
+hu  Y  \xc5\xb1	 ű
+hu  Y  \xc3\x81  Á
+hu  Y  \xc3\x89  É
+hu  Y  \xc3\x8d  Í
+hu  Y  \xc3\x93  Ó
+hu  Y  \xc3\x9a  Ú
 ##Italian
 it  Y  \xc3\xa0  à
 ## Latvian
