--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -12234,6 +12234,136 @@ Russia/Tol'yatti
 Russia/Vladivostok
 Russia/Yekatarinburg
 --------------------------------------------------------------------
+Slovakia/Banská Bystrica
+Slovakia/Banská Štiavnica
+Slovakia/Bardejov
+Slovakia/Bojnice
+Slovakia/Bratislava
+Slovakia/Brezno
+Slovakia/Brezová pod Bradlom
+Slovakia/Bytča
+Slovakia/Bánovce nad Bebravou
+Slovakia/Chlmec
+Slovakia/Chorvástky Grob - Čierna Voda
+Slovakia/Dobšiná
+Slovakia/Dolný Kubín
+Slovakia/Dubnica nad Váhom
+Slovakia/Dunajská Streda
+Slovakia/Fiľakovo
+Slovakia/Galanta
+Slovakia/Gbely
+Slovakia/Gelnica
+Slovakia/Giraltovce
+Slovakia/Handlová
+Slovakia/Hlohovec
+Slovakia/Holíč
+Slovakia/Hosťová
+Slovakia/Hriňová
+Slovakia/Humenné
+Slovakia/Hurbanovo
+Slovakia/Ilava
+Slovakia/Kežmarok
+Slovakia/Kolárovo
+Slovakia/Komárno
+Slovakia/Košice
+Slovakia/Kremnica
+Slovakia/Krompachy
+Slovakia/Krupina
+Slovakia/Kysucké Nové Mesto
+Slovakia/Leopoldov
+Slovakia/Levice
+Slovakia/Levoča
+Slovakia/Lipany
+Slovakia/Liptovský Hrádok
+Slovakia/Liptovský Mikuláš
+Slovakia/Lučenec
+Slovakia/Malacky
+Slovakia/Martin
+Slovakia/Medzev
+Slovakia/Medzilaborce
+Slovakia/Michalovce
+Slovakia/Modra
+Slovakia/Moldava nad Bodvou
+Slovakia/Myjava
+Slovakia/Nemšová
+Slovakia/Nitra
+Slovakia/Nová Baňa
+Slovakia/Nová Dubnica
+Slovakia/Nováky
+Slovakia/Nové Mesto nad Váhom
+Slovakia/Nové Zámky
+Slovakia/Námestovo
+Slovakia/Oravská Lesná
+Slovakia/Partizánske
+Slovakia/Pezinok
+Slovakia/Piešťany
+Slovakia/Podolínec
+Slovakia/Poltár
+Slovakia/Poprad
+Slovakia/Považská Bystrica
+Slovakia/Prešov
+Slovakia/Prievidza
+Slovakia/Púchov
+Slovakia/Rajec
+Slovakia/Revúca
+Slovakia/Rimavská Sobota
+Slovakia/Rožňava
+Slovakia/Ružomberok
+Slovakia/Sabinov
+Slovakia/Senec
+Slovakia/Senica
+Slovakia/Sečovce
+Slovakia/Skalica
+Slovakia/Sládkovičovo
+Slovakia/Snina
+Slovakia/Sobrance
+Slovakia/Spišská Belá
+Slovakia/Spišská Nová Ves
+Slovakia/Spišské Podhradie
+Slovakia/Stary Smokovec
+Slovakia/Stará Turá
+Slovakia/Stará Ľubovňa
+Slovakia/Strba
+Slovakia/Stropkov
+Slovakia/Strážske
+Slovakia/Stupava
+Slovakia/Svidník
+Slovakia/Svit
+Slovakia/Svodín
+Slovakia/Svätý Jur
+Slovakia/Tatranská Lomnica
+Slovakia/Tisovec
+Slovakia/Tlmače
+Slovakia/Trebišov
+Slovakia/Trenčianske Teplice
+Slovakia/Trenčín
+Slovakia/Trnava
+Slovakia/Trstená
+Slovakia/Turzovka
+Slovakia/Tvrdošín
+Slovakia/Veľký Meder
+Slovakia/Vinne
+Slovakia/Vranov nad Topľou
+Slovakia/Vrbové
+Slovakia/Vráble
+Slovakia/Vrútky
+Slovakia/Vysne Ruzbachy
+Slovakia/Vysoké Tatry
+Slovakia/Vágfüzes
+Slovakia/Zlaté Moravce
+Slovakia/Zvolen
+Slovakia/Čadca
+Slovakia/Čierna nad Tisou
+Slovakia/Šahy
+Slovakia/Šamorín
+Slovakia/Šaľa
+Slovakia/Štúrovo
+Slovakia/Šurany
+Slovakia/Žarnovica
+Slovakia/Želiezovce
+Slovakia/Žiar nad Hronom
+Slovakia/Žilina
+--------------------------------------------------------------------
 Spain/Alicante
 Spain/Barcelona
 Spain/Granada
