Hungarian and Slovakian cities added. Thanks to torpe

--- a/plugin/control
+++ b/plugin/control
@@ -1,4 +1,4 @@
-﻿Package: enigma2-plugin-extensions-foreca
+Package: enigma2-plugin-extensions-foreca
 Version: 2.9.2
 Description: Weather forecast for the upcoming 10 days
 Section: extra
