--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -12556,6 +12556,7 @@ Russia/Chelyabinsk
 Russia/Irkutsk
 Russia/Kaliningrad
 Russia/Kazan'
+Russia/Leningradskiy
 Russia/Moskva
 Russia/Murmansk
 Russia/Nizhniy_Novgorod
@@ -13151,6 +13152,7 @@ Canada/Ottawa
 Canada/Prince_Rupert
 Canada/Quebec
 Canada/Regina
+Canada/Resolute
 Canada/Sept-Iles
 Canada/St._John's
 Canada/Thunder_Bay
@@ -14144,6 +14146,7 @@ New_Zealand/Gisborne
 New_Zealand/Greymouth
 New_Zealand/Hamilton
 New_Zealand/Invercargill
+New_Zealand/Mt._Cheeseman
 New_Zealand/Napier
 New_Zealand/Nelson
 New_Zealand/New_Plymouth
