--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -130,6 +130,7 @@ hu  Y  \xc3\x93  Ó
 hu  Y  \xc3\x9a  Ú
 ##Italian
 it  Y  \xc3\xa0  à
+it  Y  \xc3\xba  ú
 ## Latvian
 lv  Y  \xc4\x80  Ā
 lv  Y  \xc4\x8c  Č
