--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -66,6 +66,7 @@ Austria/Kleinwalsertal
 Austria/Klosterneuburg
 Austria/Knittelfeld
 Austria/Koflach
+Austria/Kramsach
 Austria/Krems_an_der_Donau
 Austria/Kufstein
 Austria/Laarkirchen
@@ -15105,12 +15106,361 @@ Italy/Fuscaldo
 Italy/Fusignano
 Italy/Fusine
 Italy/Futani
+Italy/Gadoni
+Italy/Gaeta
+Italy/Gaggi
+Italy/Gaggiano
+Italy/Gaggio_Montano
+Italy/Gaglianico
+Italy/Gagliano_Aterno
+Italy/Gagliano_Castelferrato
+Italy/Gagliano_del_Capo
+Italy/Gagliato
+Italy/Gagliole
+Italy/Gaiarine
+Italy/Gaiba
+Italy/Gaibanella
+Italy/Gaiola
+Italy/Gaiole_in_Chianti
+Italy/Gairo
+Italy/Gais_-_Gais
+Italy/Galati_Mamertino
+Italy/Galatina
+Italy/Galatone
+Italy/Galatro
+Italy/Galbiate
+Italy/Galeata
+Italy/Galgagnano
+Italy/Gallarate
+Italy/Gallese
+Italy/Galliate
+Italy/Galliate_Lombardo
+Italy/Galliavola
+Italy/Gallicano
+Italy/Gallicano_nel_Lazio
+Italy/Gallicchio
+Italy/Galliera
+Italy/Galliera_Veneta
+Italy/Gallinaro
+Italy/Gallio
+Italy/Gallipoli
+Italy/Gallo_Matese
+Italy/Gallodoro
+Italy/Galluccio
+Italy/Galtelli
+Italy/Galzignano_Terme
+Italy/Gamalero
+Italy/Gambara
+Italy/Gambarana
+Italy/Gambasca
+Italy/Gambassi_Terme
+Italy/Gambatesa
+Italy/Gambellara
+Italy/Gamberale
+Italy/Gambettola
+Italy/Gambolo
+Italy/Gambugliano
+Italy/Gandellino
+Italy/Gandino
+Italy/Gandosso
+Italy/Gangi
+Italy/Garaguso
+Italy/Garbagna
+Italy/Garbagna_Novarese
+Italy/Garbagnate_Milanese
+Italy/Garbagnate_Monastero
 Italy/Garda
+Italy/Gardone_Riviera
+Italy/Gardone_Val_Trompia
+Italy/Garessio
+Italy/Gargallo
+Italy/Gargazzone_-_Gargazon
+Italy/Gargnano
+Italy/Garlasco
+Italy/Garlate
+Italy/Garlenda
+Italy/Garniga_Terme
+Italy/Garzeno
+Italy/Garzigliana
+Italy/Gasperina
+Italy/Gassino_Torinese
+Italy/Gattatico
+Italy/Gatteo
+Italy/Gattico
+Italy/Gattinara
+Italy/Gavardo
+Italy/Gavazzana
+Italy/Gavello
+Italy/Gaverina_Terme
+Italy/Gavi
+Italy/Gavignano
+Italy/Gavirate 
+Italy/Gavoi 
+Italy/Gavorrano 
+Italy/Gazoldo_degli_Ippoliti 
+Italy/Gazzada_Schianno 
+Italy/Gazzaniga 
+Italy/Gazzo
+Italy/Gazzo_Veronese
+Italy/Gazzola
+Italy/Gazzuolo
+Italy/Gela
+Italy/Gemmano
+Italy/Gemona_del_Friuli
+Italy/Gemonio
+Italy/Genazzano
+Italy/Genga
+Italy/Genivolta
+Italy/Genola
+Italy/Genoni
 Italy/Genova
+Italy/Genuri
+Italy/Genzano_di_Lucania
+Italy/Genzano_di_Roma
+Italy/Genzone
+Italy/Gera_Lario
+Italy/Gerace
+Italy/Geraci_Siculo
+Italy/Gerano
+Italy/Gerenzago
+Italy/Gerenzano
+Italy/Gergei
+Italy/Germagnano
+Italy/Germagno
+Italy/Germasino
+Italy/Germignaga
+Italy/Gerocarne
+Italy/Gerola_Alta
+Italy/Gerosa
+Italy/Gerre_de'_Caprioli
+Italy/Gesico
+Italy/Gessate
+Italy/Gessopalena
+Italy/Gesturi
+Italy/Gesualdo
+Italy/Ghedi
+Italy/Ghemme
+Italy/Ghiffa
+Italy/Ghilarza
+Italy/Ghisalba
+Italy/Ghislarengo
+Italy/Giacciano_con_Baruchella
+Italy/Giaglione
+Italy/Gianico
+Italy/Giano_dell'Umbria
+Italy/Giano_Vetusto
+Italy/Giardinello
+Italy/Giardini_Naxos
+Italy/Giarole
+Italy/Giarratana
+Italy/Giarre
+Italy/Giave
+Italy/Giaveno
+Italy/Giavera_del_Montello
+Italy/Giba
+Italy/Gibellina
+Italy/Gifflenga
+Italy/Giffone
+Italy/Giffoni_Sei_Casali
+Italy/Giffoni_Valle_Piana
+Italy/Gignese
+Italy/Gignod
+Italy/Gildone
+Italy/Gimigliano
+Italy/Ginestra
+Italy/Ginestra_degli_Schiavoni
+Italy/Ginosa
+Italy/Gioi
+Italy/Gioia_dei_Marsi
+Italy/Gioia_del_Colle
+Italy/Gioia_Sannitica
+Italy/Gioia_Tauro
+Italy/Gioiosa_Ionica
+Italy/Gioiosa_Marea
+Italy/Giove
+Italy/Giovinazzo
+Italy/Giovo
+Italy/Girasole
+Italy/Girifalco
+Italy/Gironico
+Italy/Gissi
+Italy/Giuggianello
+Italy/Giugliano_in_Campania
+Italy/Giuliana
+Italy/Giuliano_di_Roma
+Italy/Giuliano_Teatino
+Italy/Giulianova
+Italy/Giuncugnano
+Italy/Giungano
+Italy/Giurdignano
+Italy/Giussago
+Italy/Giussano
+Italy/Giustenice
+Italy/Giustino
+Italy/Giusvalla
+Italy/Givoletto
+Italy/Gizzeria
+Italy/Glorenza_-_Glurns
+Italy/Godega_di_Sant'Urbano
+Italy/Godiasco
+Italy/Godrano
+Italy/Goito
+Italy/Golasecca
+Italy/Golferenzo
+Italy/Golfo_Aranci
+Italy/Golfo_Arnaci
+Italy/Gombito
+Italy/Gonars
+Italy/Goni
+Italy/Gonnesa
+Italy/Gonnoscodina
+Italy/Gonnosfanadiga
+Italy/Gonnostramatza
+Italy/Gonzaga
+Italy/Gordona
+Italy/Gorga
+Italy/Gorgo_al_Monticano
+Italy/Gorgoglione
+Italy/Gorgonzola
+Italy/Goriano_Sicoli
 Italy/Gorizia
+Italy/Gorla_Maggiore
+Italy/Gorla_Minore
+Italy/Gorlago
+Italy/Gorle
+Italy/Gornate-Olona
+Italy/Gorno
+Italy/Goro
+Italy/Gorreto
+Italy/Gorzegno
+Italy/Gosaldo
+Italy/Gossolengo
+Italy/Gottasecca
+Italy/Gottolengo
+Italy/Govone
+Italy/Gozzano
+Italy/Gradara
+Italy/Gradisca_d'Isonzo
 Italy/Grado
+Italy/Gradoli
+Italy/Graffignana
+Italy/Graffignano
+Italy/Graglia
+Italy/Gragnano
+Italy/Gragnano_Trebbiense
+Italy/Grammichele
+Italy/Grana
+Italy/Granaglione
+Italy/Granarolo_dell'Emilia
+Italy/Grancona
+Italy/Grandate
+Italy/Grandola_ed_Uniti
+Italy/Graniti
+Italy/Granozzo_con_Monticello
+Italy/Grantola
+Italy/Grantorto
+Italy/Granze
+Italy/Grassano
+Italy/Grassobbio
+Italy/Gratteri
+Italy/Grauno
 Italy/Gravedona
+Italy/Gravellona_Lomellina
+Italy/Gravellona_Toce
+Italy/Gravere
+Italy/Gravina_di_Catania
+Italy/Gravina_in_Puglia
+Italy/Grazzanise
+Italy/Grazzano_Badoglio
+Italy/Greccio
+Italy/Greci
+Italy/Greggio
+Italy/Gremiasco
+Italy/Gressan
+Italy/Gressoney-la-Trinite
+Italy/Gressoney-Saint-Jean
+Italy/Greve_in_Chianti
+Italy/Grezzago
+Italy/Grezzana
+Italy/Griante
+Italy/Gricignano_di_Aversa
+Italy/Grignasco
+Italy/Grigno
+Italy/Grimacco
+Italy/Grimaldi
+Italy/Grinzane_Cavour
+Italy/Grisignano_di_Zocco
+Italy/Grisolia
+Italy/Grizzana_Morandi
+Italy/Grognardo
+Italy/Gromo
+Italy/Grondona
+Italy/Grone
+Italy/Grontardo
+Italy/Gropello_Cairoli
+Italy/Gropparello
+Italy/Groscavallo
+Italy/Grosio
+Italy/Grosotto
 Italy/Grosseto
+Italy/Grosso
+Italy/Grottaferrata
+Italy/Grottaglie
+Italy/Grottaminarda
+Italy/Grottammare
+Italy/Grottazzolina
+Italy/Grotte
+Italy/Grotte_di_Castro
+Italy/Grotteria
+Italy/Grottole
+Italy/Grottolella
+Italy/Gruaro
+Italy/Grugliasco
+Italy/Grumello_Cremonese_ed_Uniti
+Italy/Grumello_del_Monte
+Italy/Grumento_Nova
+Italy/Grumes
+Italy/Grumo_Appula
+Italy/Grumo_Nevano
+Italy/Grumolo_delle_Abbadesse
+Italy/Guagnano
+Italy/Gualdo
+Italy/Gualdo_Cattaneo
+Italy/Gualdo_Tadino
+Italy/Gualtieri
+Italy/Gualtieri_Sicamino
+Italy/Guamaggiore
+Italy/Guanzate
+Italy/Guarcino
+Italy/Guarda_Veneta
+Italy/Guardabosone
+Italy/Guardamiglio
+Italy/Guardavalle
+Italy/Guardea
+Italy/Guardia_Lombardi
+Italy/Guardia_Perticara
+Italy/Guardia_Piemontese
+Italy/Guardia_Sanframondi
+Italy/Guardiagrele
+Italy/Guardialfiera
+Italy/Guardiaregia
+Italy/Guardistallo
+Italy/Guarene
+Italy/Guasila
+Italy/Guastalla
+Italy/Guazzora
+Italy/Gubbio
+Italy/Gudo_Visconti
+Italy/Guglionesi
+Italy/Guidizzolo
+Italy/Guidonia
+Italy/Guidonia_Montecelio
+Italy/Guiglia
+Italy/Guilmi
+Italy/Gurro
+Italy/Guspini
+Italy/Gussago
+Italy/Gussola
 Italy/Hone
 Italy/Idro
 Italy/Iesolo
