--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -20828,27 +20828,86 @@ Switzerland/Zug
 Switzerland/Zurich
 --------------------------------------------------------------------
 Turkey/Adana
+Turkey/Adiyaman
+Turkey/Afyonkarahisar
+Turkey/Agri
+Turkey/Aksaray
 Turkey/Alanya
+Turkey/Amasya
 Turkey/Ankara
 Turkey/Antalya
+Turkey/Ardahan
+Turkey/Artvin
+Turkey/Aydin
+Turkey/Balikesir
+Turkey/Bartin
+Turkey/Batman
+Turkey/Bayburt
+Turkey/Bilecik
+Turkey/Bingöl
+Turkey/Bitlis
+Turkey/Bolu
+Turkey/Burdur
 Turkey/Bursa
+Turkey/Canakkale
+Turkey/Cankiri
+Turkey/Corum    
 Turkey/Denizli
 Turkey/Diyarbakir
+Turkey/Düzce
+Turkey/Edirne
 Turkey/Elazig
+Turkey/Erzincan
 Turkey/Erzurum
 Turkey/Eskisehir_Ili
 Turkey/Gaziantep
+Turkey/Gümüshane
+Turkey/Hakkari
+Turkey/Hatay
+Turkey/Igdir
+Turkey/Isparta
 Turkey/Istanbul
 Turkey/Izmir
 Turkey/Kahramanmaras
+Turkey/Karabük
+Turkey/Karaman
+Turkey/Kars
+Turkey/Kastamonu
 Turkey/Kayseri
+Turkey/Kilis
+Turkey/Kirikkale
+Turkey/Kirklareli
+Turkey/Kirsehir
+Turkey/Kocaeli
 Turkey/Konya
+Turkey/Kütahya
 Turkey/Malatya
-Turkey/Mercin
+Turkey/Manisa
+Turkey/Mardin
+Turkey/Mersin
+Turkey/Mugla
+Turkey/Mus
+Turkey/Nevsehir
+Turkey/Nigde
+Turkey/Ordu
+Turkey/Osmaniye
+Turkey/Rize
+Turkey/Sakarya
 Turkey/Samsun
 Turkey/Sanliurfa
+Turkey/Siirt
+Turkey/Sinop
+Turkey/Sirnak
+Turkey/Sivas
+Turkey/Tekirdag
+Turkey/Tokat 
 Turkey/Trabzon
+Turkey/Tunceli
+Turkey/Usak
 Turkey/Van
+Turkey/Yalova
+Turkey/Yozgat
+Turkey/Zonguldak
 --------------------------------------------------------------------
 Ukraine/Dnipropetrovs'k
 Ukraine/Donets'k
