Update Ukrainian alphabet
Adding Ukrainian alphabet to display correctly on the Ukrainian localization

--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -332,3 +332,72 @@ el  Y  \xce\xaf  ί
 el  Y  \xcf\x8c  ό
 el  Y  \xcf\x8e  ώ
 el  Y  \xce\xae  ή
+##Ukrainian
+uk  Y  \xd0\xb0  а 
+uk  Y  \xd0\x90  А 
+uk  Y  \xd0\xb1  б 
+uk  Y  \xd0\x91  Б 
+uk  Y  \xd0\xb2  в 
+uk  Y  \xd0\x92  В 
+uk  Y  \xd0\xb3  г 
+uk  Y  \xd0\x93  Г 
+uk  Y  \xd0\xb4  д 
+uk  Y  \xd0\x94  Д 
+uk  Y  \xd0\xb5  е 
+uk  Y  \xd0\x95  Е 
+uk  Y  \xd1\x91  ё 
+uk  Y  \xd1\x91  Ё 
+uk  Y  \xd0\xb6  ж 
+uk  Y  \xd0\x96  Ж 
+uk  Y  \xd0\xb7  з 
+uk  Y  \xd0\x97  З 
+uk  Y  \xd0\xb8  и 
+uk  Y  \xd0\x98  И 
+uk  Y  \xd1\x96  і 
+uk  Y  \xd1\x99  І 
+uk  Y  \xd0\xb9  й 
+uk  Y  \xd0\x99  Й 
+uk  Y  \xd0\xba  к 
+uk  Y  \xd0\x9a  К 
+uk  Y  \xd0\xbb  л 
+uk  Y  \xd0\x9b  Л 
+uk  Y  \xd0\xbc  м 
+uk  Y  \xd0\x9c  М 
+uk  Y  \xd0\xbd  н 
+uk  Y  \xd0\x9d  Н 
+uk  Y  \xd0\xbe  о 
+uk  Y  \xd0\x9e  О 
+uk  Y  \xd0\xbf  п 
+uk  Y  \xd0\x9f  П 
+uk  Y  \xd1\x80  р 
+uk  Y  \xd0\xa0  Р 
+uk  Y  \xd1\x81  с 
+uk  Y  \xd0\xa1  С 
+uk  Y  \xd1\x82  т 
+uk  Y  \xd0\xa2  Т 
+uk  Y  \xd1\x83  у 
+uk  Y  \xd0\xa3  У 
+uk  Y  \xd1\x84  ф 
+uk  Y  \xd0\xa4  Ф 
+uk  Y  \xd1\x85  х 
+uk  Y  \xd0\xa5  Х 
+uk  Y  \xd1\x86  ц 
+uk  Y  \xd0\xa6  Ц 
+uk  Y  \xd1\x87  ч 
+uk  Y  \xd0\xa7  Ч 
+uk  Y  \xd1\x88  ш 
+uk  Y  \xd0\xa8  Ш 
+uk  Y  \xd1\x89  щ 
+uk  Y  \xd0\xa9  Щ 
+uk  Y  \xd1\x8a  ъ 
+uk  Y  \xd0\xaa  Ъ 
+uk  Y  \xd1\x8b  и 
+uk  Y  \xd0\xab  И 
+uk  Y  \xd1\x8c  ь 
+uk  Y  \xd0\xac  ь 
+uk  Y  \xd1\x8d  э 
+uk  Y  \xd0\xad  Э 
+uk  Y  \xd1\x8e  ю 
+uk  Y  \xd0\xae  Ю 
+uk  Y  \xd1\x8f  я 
+uk  Y  \xd0\xaf  Я 
