--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -54,6 +54,15 @@ nl  Y  \xc4\xb1  ü
 nl  Y  \xc4\x91  Ü 
 nl  Y  \xc4\xb3  ĳ 
 nl  Y  \xc4\xb2  Ĳ 
+## Estonian
+et  Y  \xc3\xa4  ä
+et  Y  \xc3\x84  Ä
+et  Y  \xc3\x96  Ö
+et  Y  \xc3\xb6  ö
+et  Y  \xc3\xb5  õ
+et  Y  \xc3\x95  Õ
+et  Y  \xc3\xbc  ü
+et  Y  \xc3\x9c  Ü
 ## French
 fr  Y  \xc3\xa0  à 
 fr  Y  \xc3\x80  À 
