--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -317,7 +317,7 @@ Eire/Waterford
 Eire/Wexford
 --------------------------------------------------------------------
 Estonia/Haapsalu
-Estonia/Kohtla-Jarve
+Estonia/Kohtla-Järve
 Estonia/Kunda
 Estonia/Kuressaare
 Estonia/Maardu
@@ -325,14 +325,15 @@ Estonia/Muuga
 Estonia/Narva
 Estonia/Paide
 Estonia/Paldiski
-Estonia/Parnu
+Estonia/Pärnu
 Estonia/Rakvere
-Estonia/Sillamae
+Estonia/Rapla
+Estonia/Sillamäe
 Estonia/Tallinn
 Estonia/Tartu
 Estonia/Valga
 Estonia/Viljandi
-Estonia/Voru 
+Estonia/Võru 
 --------------------------------------------------------------------
 Finland/Anjala
 Finland/Ekenas
