--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -317,22 +317,24 @@ Eire/Waterford
 Eire/Wexford
 --------------------------------------------------------------------
 Estonia/Haapsalu
-Estonia/Kohtla-Jarve
+Estonia/Kohtla-Järve
 Estonia/Kunda
 Estonia/Kuressaare
+Estonia/Kärdla
 Estonia/Maardu
 Estonia/Muuga
 Estonia/Narva
 Estonia/Paide
 Estonia/Paldiski
-Estonia/Parnu
+Estonia/Pärnu
 Estonia/Rakvere
-Estonia/Sillamae
+Estonia/Rapla
+Estonia/Sillamäe
 Estonia/Tallinn
 Estonia/Tartu
 Estonia/Valga
 Estonia/Viljandi
-Estonia/Voru 
+Estonia/Võru
 --------------------------------------------------------------------
 Finland/Anjala
 Finland/Ekenas
