--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -401,3 +401,12 @@ uk  Y  \xd1\x8e  ю
 uk  Y  \xd0\xae  Ю 
 uk  Y  \xd1\x8f  я 
 uk  Y  \xd0\xaf  Я 
+## Estonian
+et  Y  \xc3\xa4  ä
+et  Y  \xc3\x84  Ä
+et  Y  \xc3\x96  Ö
+et  Y  \xc3\xb6  ö
+et  Y  \xc3\xb5  õ
+et  Y  \xc3\x95  Õ
+et  Y  \xc3\xbc  ü
+et  Y  \xc3\x9c  Ü
