Update Hellenic alphabet
Adding missing Hellenic letters.

--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -326,6 +326,12 @@ el  Y  \xce\x9e  Ξ
 el  Y  \xce\x9f  Ο
 el  Y  \xce\xa0  Π
 el  Y  \xce\xa3  Σ
+el  Y  \xce\xa4  Τ
+el  Y  \xce\xa5  Υ
+el  Y  \xce\xa6  Φ
+el  Y  \xce\xa7  Χ
+el  Y  \xce\xa8  Ψ
+el  Y  \xce\xa9  Ω
 el  Y  \xce\xac  ά
 el  Y  \xce\xad  έ
 el  Y  \xce\xaf  ί
