Add more bulgarian cities

--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -203,19 +203,41 @@ Bosnia_and_Herzegovina/Sarajevo
 Bosnia_and_Herzegovina/Tuzla
 Bosnia_and_Herzegovina/Zenica
 --------------------------------------------------------------------
+Bulgaria/Asenovgrad
 Bulgaria/Blagoevgrad
 Bulgaria/Burgas
+Bulgaria/Dimitrovgrad
 Bulgaria/Dobrich
+Bulgaria/Dupnitsa
+Bulgaria/Gabrovo
+Bulgaria/Gorna_Oryakhovitsa
+Bulgaria/Kazanluk
+Bulgaria/Khaskovo
+Bulgaria/Kurdzhali
+Bulgaria/Kyustendil
+Bulgaria/Lovech
+Bulgaria/Montana
+Bulgaria/Pazardzhik
 Bulgaria/Pernik
+Bulgaria/Petrich
 Bulgaria/Pleven
 Bulgaria/Plovdiv
+Bulgaria/Razgrad
 Bulgaria/Ruse
+Bulgaria/Samokov
+Bulgaria/Sandanski
 Bulgaria/Shumen
+Bulgaria/Silistra
 Bulgaria/Sliven
+Bulgaria/Smolyan
 Bulgaria/Sofia
 Bulgaria/Stara_Zagora
+Bulgaria/Turgovishte
 Bulgaria/Varna
+Bulgaria/Veliko_Turnovo
 Bulgaria/Vidin
+Bulgaria/Vratsa
+Bulgaria/Yambol
 --------------------------------------------------------------------
 Croatia/Baska
 Croatia/Bjelovar
