--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -7,6 +7,67 @@
 ##            15 spaces as separator (2 positions)
 ##            17 diactritics translation output (1 position)
 ##
+##Bulgarian
+bg  Y  \xd0\xb0  а 
+bg  Y  \xd0\x90  А 
+bg  Y  \xd0\xb1  б 
+bg  Y  \xd0\x91  Б 
+bg  Y  \xd0\xb2  в 
+bg  Y  \xd0\x92  В 
+bg  Y  \xd0\xb3  г 
+bg  Y  \xd0\x93  Г 
+bg  Y  \xd0\xb4  д 
+bg  Y  \xd0\x94  Д 
+bg  Y  \xd0\xb5  е 
+bg  Y  \xd0\x95  Е 
+bg  Y  \xd0\xb6  ж 
+bg  Y  \xd0\x96  Ж 
+bg  Y  \xd0\xb7  з 
+bg  Y  \xd0\x97  З 
+bg  Y  \xd0\xb8  и 
+bg  Y  \xd0\x98  И 
+bg  Y  \xd0\xb9  й 
+bg  Y  \xd0\x99  Й 
+bg  Y  \xd0\xba  к 
+bg  Y  \xd0\x9a  К 
+bg  Y  \xd0\xbb  л 
+bg  Y  \xd0\x9b  Л 
+bg  Y  \xd0\xbc  м 
+bg  Y  \xd0\x9c  М 
+bg  Y  \xd0\xbd  н 
+bg  Y  \xd0\x9d  Н 
+bg  Y  \xd0\xbe  о 
+bg  Y  \xd0\x9e  О 
+bg  Y  \xd0\xbf  п 
+bg  Y  \xd0\x9f  П 
+bg  Y  \xd1\x80  р 
+bg  Y  \xd0\xa0  Р 
+bg  Y  \xd1\x81  с 
+bg  Y  \xd0\xa1  С 
+bg  Y  \xd1\x82  т 
+bg  Y  \xd0\xa2  Т 
+bg  Y  \xd1\x83  у 
+bg  Y  \xd0\xa3  У 
+bg  Y  \xd1\x84  ф 
+bg  Y  \xd0\xa4  Ф 
+bg  Y  \xd1\x85  х 
+bg  Y  \xd0\xa5  Х 
+bg  Y  \xd1\x86  ц 
+bg  Y  \xd0\xa6  Ц 
+bg  Y  \xd1\x87  ч 
+bg  Y  \xd0\xa7  Ч 
+bg  Y  \xd1\x88  ш 
+bg  Y  \xd0\xa8  Ш 
+bg  Y  \xd1\x89  щ 
+bg  Y  \xd0\xa9  Щ 
+bg  Y  \xd1\x8a  ъ 
+bg  Y  \xd0\xaa  Ъ 
+bg  Y  \xd0\xac  ь 
+bg  Y  \xd1\x8e  ю 
+bg  Y  \xd0\xae  Ю 
+bg  Y  \xd1\x8f  я 
+bg  Y  \xd0\xaf  Я 
+
 ## Dutch
 nl  Y  \xc3\xa0  à 
 nl  Y  \xc3\x80  À 
