--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -219,6 +219,25 @@ lv  Y  \xc5\x97  ŗ
 lv  Y  \xc5\xa1  š
 lv  Y  \xc5\xab  ū
 lv  Y  \xc5\xbe  ž
+## Lithuanian
+lt  Y  \xc4\x84  Ą 
+lt  Y  \xc4\x85  ą 
+lt  Y  \xc4\x8c  Č 
+lt  Y  \xc4\x8d  č 
+lt  Y  \xc4\x98  Ę 
+lt  Y  \xc4\x99  ę 
+lt  Y  \xc4\x96  Ė 
+lt  Y  \xc4\x97  ė 
+lt  Y  \xc4\xae  Į 
+lt  Y  \xc4\xaf  į 
+lt  Y  \xc5\xa0  Š 
+lt  Y  \xc5\xa1  š 
+lt  Y  \xc5\xb2  Ų 
+lt  Y  \xc5\xb3  ų 
+lt  Y  \xc5\xaa  Ū 
+lt  Y  \xc5\xab  ū 
+lt  Y  \xc5\xbd  Ž 
+lt  Y  \xc5\xbe  ž 
 ## Polish
 pl  Y  \xc4\x85  ą 
 pl  Y  \xc4\x84  Ą 
