--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -20395,15 +20395,76 @@ Liechtenstein/Mauren
 Liechtenstein/Triesen
 Liechtenstein/Vaduz
 --------------------------------------------------------------------
+Lithuania/Akmene
 Lithuania/Alytus
+Lithuania/Anyksciai
+Lithuania/Baltoji_Voke
+Lithuania/Birstonas
+Lithuania/Birzai
+Lithuania/Daugai
+Lithuania/Druskininkai
+Lithuania/Dukstas
+Lithuania/Dusetos
+Lithuania/Eisiskes
+Lithuania/Elektrenai
+Lithuania/Gargzdai
+Lithuania/Garliava
+Lithuania/Grigiskes
+Lithuania/Ignalina
+Lithuania/Jonava
+Lithuania/Joniskis
+Lithuania/Juodkrante
+Lithuania/Jurbarkas
+Lithuania/Kaisiadorys
 Lithuania/Kaunas
+Lithuania/Kazlu_Ruda
+Lithuania/Kedainiai
+Lithuania/Kelme
+Lithuania/Kybartai
 Lithuania/Klaipeda
+Lithuania/Kupiskis
+Lithuania/Lazdijai
+Lithuania/Marijampole
+Lithuania/Mazeikiai
+Lithuania/Moletai
+Lithuania/Naujoji_Akmene
+Lithuania/Neringa
+Lithuania/Nida
+Lithuania/Obeliai
+Lithuania/Pabrade
+Lithuania/Pagegiai
+Lithuania/Pakruojis
+Lithuania/Palanga
 Lithuania/Panevezys
+Lithuania/Pasvalys
+Lithuania/Plunge
+Lithuania/Prienai
+Lithuania/Radviliskis
+Lithuania/Raseiniai
+Lithuania/Rokiskis
+Lithuania/Rusne
+Lithuania/Sakiai
+Lithuania/Salcininkai
 Lithuania/Siauliai
+Lithuania/Silale
+Lithuania/Silute
+Lithuania/Sirvintos
+Lithuania/Skuodas
+Lithuania/Svencioneliai
+Lithuania/Svencionys
 Lithuania/Taurage
 Lithuania/Telsiai
+Lithuania/Trakai
+Lithuania/Ukmerge
 Lithuania/Utena
+Lithuania/Varena
+Lithuania/Vievis
+Lithuania/Vilkaviskis
 Lithuania/Vilnius 
+Lithuania/Visaginas
+Lithuania/Zagare
+Lithuania/Zarasai
+Lithuania/Ziezmariai
 --------------------------------------------------------------------
 Luxembourg/Belvaux
 Luxembourg/Luxembourg
