--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -239,6 +239,22 @@ Bulgaria/Vidin
 Bulgaria/Vratsa
 Bulgaria/Yambol
 ########
+China/Hangzhou
+China/Beijing
+China/Shanghai
+China/Changsha
+China/Chengdu
+China/Chongqing
+China/Fuzhou
+China/Guangzhou
+China/Nanjing
+China/Qingdao
+China/Shenyang
+China/Zhengzhou
+China/Dalian
+China/Guilin
+China/Guiyang
+########
 Croatia/Baska
 Croatia/Bjelovar
 Croatia/Bol
