Add missing characters for spain

--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -496,3 +496,6 @@ et  Y  \xc3\xb5  õ
 et  Y  \xc3\x95  Õ
 et  Y  \xc3\xbc  ü
 et  Y  \xc3\x9c  Ü
+## Spain
+es  Y  \xc3\xa9  é 
+es  Y  \xc3\xb3  ó
