--- a/plugin/control
+++ b/plugin/control
@@ -6,6 +6,6 @@ Priority: optional
 Maintainer: Bauernbub
 Architecture: all
 OE: enigma2-plugin-extensions-foreca
-Depends: enigma2, python-html, python-twisted-web
+Depends: enigma2, python-html, python-twisted-web, python-requests
 Homepage: http://openpli.org/forums/topic/25848-foreca-weather-plugin-problem/
 Source: https://github.com/E2OpenPlugins/e2openplugin-Foreca
