--- a/plugin/control
+++ b/plugin/control
@@ -1,5 +1,5 @@
 Package: enigma2-plugin-extensions-foreca
-Version: 3.3.5
+Version: 3.3.6
 Description: Weather forecast for the upcoming 10 days
 Section: extra
 Priority: optional
@@ -7,4 +7,4 @@ Maintainer: Bauernbub
 Architecture: all
 OE: enigma2-plugin-extensions-foreca
 Homepage: http://openpli.org/forums/topic/25848-foreca-weather-plugin-problem/
-Source: *
+Source: https://github.com/E2OpenPlugins/e2openplugin-Foreca
